Use java 11 based files read string to replace commons io usage